--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
       <label for="brand">Brand Name</label>
       <select id="brand" name="brand" required>
         <option value="">Select Brand</option>
-        <option value="Bata">Bata</option>
-        <option value="RedTape">RedTape</option>
-        <option value="Campus">Campus</option>
-        <option value="Sparx">Sparx</option>
-        <option value="Others">Others</option>
+        <option value="Rieker_26078">Rieker</option>
+
       </select>
 
       <!-- IST Date -->
@@ -75,5 +72,6 @@
   </script>
 </body>
 </html>
+
 
 
