--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <label for="brand">Brand Name</label>
       <select id="brand" name="brand" required>
         <option value="">Select Brand</option>
-        <option value="Rieker_26078">Rieker</option>
+        <option value="GZL_F6000">GZL_F6000</option>
 
       </select>
 
@@ -72,6 +72,7 @@
   </script>
 </body>
 </html>
+
 
 
 
